# XtrackCad

./: .hgignore  CMakeLists.txt  xtrkcad-config.h.in
app/doc/: filem.but  optionm.but  view_winm.but  xtrkcad_lin.css  xtrkcad_win.css
app/help/: genhelp.in  messages.in
app/i18n/: de_DE.po  fi.po  pt_BR.po
app/lib/: CMakeLists.txt  Readme.creole  Readme.md  Readme.txt  mdtotxt.bat  xtrkcad.xtq
app/lib/examples/: 2_train_round_mrklnhomde_v1_2014_01.xtc  2oval8_mrklnhomde_v1_2013_03.xtc  2way2loop_mrklnhomde_v1_2013_04.xtc  2x8+L+layout+01c.xtc  3_circles_loops_mrklnhomde_2013_06_jruppert.xtc  3oval1circle_mrklnhomde_v1_2013_03.xtc  3oval2loops_mrklnhomde_v1_2013_04.xtc  3oval8_mrklnhomde_v1_2013_03.xtc  3way_track_and_looping_mrklnhomde_2013_02_jruppert.xtc  4_Triangles_mrklnhomde_2012_11_jruppert.xtc  Bridge_over_central_station.xtc  Central_Station_City_mrklnhomde_2013_06_jruppert.xtc  Central_Station_mrklnhomde_2013_04_jruppert.xtc  DVRR v3.0 E Stroudsburg - Pt Jervis.xtc  MaerklinLayout_ReverseLoop4.xtc  Station_2ladder_v1_2014_07_jruppert.xtc  Station_and_Circles_mrklnhomde_2013_02_jruppert.xtc  bridge_and_loops_mrklnhomde_v1_2013_03.xtc  port_dinllean.xtc  (+3 more)
app/tools/: layerbuttons.ps1
app/wlib/gtklib/: CMakeLists.txt  FindGTKUnixPrint.cmake  filesel.c  gtkbitmap.c  gtkbutton.c  gtkcolor.c  gtkdraw-cairo.c  gtkdraw.c  gtkfilsel.c  gtkfont.c  gtkhelp.c  gtkint.h  gtklist.c  gtkmenu.c  gtktext.c  gtkxpm.c  print.c  psprint.c  wpref.c
distribution/osx/: CMakeLists.txt
distribution/posix/: CMakeLists.txt  changelog.txt  xtrkcad.spec  xtrkcad_4.2.1.dsc
(+188 files in other folders)
